--- a/index.html
+++ b/index.html
@@ -1,47 +1,44 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>WebGIS - Station Only</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+    <style>
+        body { margin:0; padding:0; }
+        #map { height:100vh; width:100%; }
+    </style>
+</head>
+<body>
+
+<div id="map"></div>
+
 <script>
+
+// Base map
 var map = L.map('map').setView([-6.2, 106.8], 12);
 
-var basemap = L.tileLayer(
-    'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
-    { attribution: '© OpenStreetMap' }
-).addTo(map);
-
-var wmsUrl = "https://a11f-2a09-bac1-34a0-18-00-279-5a.ngrok-free.app/geoserver/webgis/wms";
-
-var alignment = L.tileLayer.wms(wmsUrl, {
-    layers: "webgis:infra2_alignment",
-    format: "image/png",
-    transparent: true,
-    version: "1.1.0"
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '© OpenStreetMap'
 }).addTo(map);
 
+// WMS URL (PASTIKAN HTTPS ngrok aktif)
+var wmsUrl = "https://a11f-2a09-bac1-34a0-18-00-279-5a.ngrok-free.app/geoserver/webgis/wms";
+
+// Station Layer Only
 var station = L.tileLayer.wms(wmsUrl, {
     layers: "webgis:infra2_station",
     format: "image/png",
     transparent: true,
-    version: "1.1.0"
+    version: "1.1.1",
+    srs: "EPSG:4326"
 }).addTo(map);
 
-var sitelocation = L.tileLayer.wms(wmsUrl, {
-    layers: "webgis:infra2_sitelocation",
-    format: "image/png",
-    transparent: true,
-    version: "1.1.0"
-}).addTo(map);
-
-var bm = L.tileLayer.wms(wmsUrl, {
-    layers: "webgis:infra2_bm",
-    format: "image/png",
-    transparent: true,
-    version: "1.1.0"
-}).addTo(map);
-
-var overlayMaps = {
-    "Centerline": alignment,
-    "Station": station,
-    "Site Location": sitelocation,
-    "Benchmark": bm
-};
-
-L.control.layers(null, overlayMaps).addTo(map);
 </script>
+
+</body>
+</html>
