--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WebGIS - Station Only</title>
+    <title>WebGIS Infra 2</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -19,23 +19,66 @@
 
 <script>
 
-// Base map
 var map = L.map('map').setView([-6.2, 106.8], 12);
 
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '© OpenStreetMap'
-}).addTo(map);
+// Basemap
+var osm = L.tileLayer(
+    'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+    { attribution: '© OpenStreetMap' }
+).addTo(map);
 
-// WMS URL (PASTIKAN HTTPS ngrok aktif)
+// WMS URL
 var wmsUrl = "https://a11f-2a09-bac1-34a0-18-00-279-5a.ngrok-free.app/geoserver/webgis/wms";
 
-// Station Layer Only
+// === WMS Layers (TIDAK addTo dulu) ===
+
+var alignment = L.tileLayer.wms(wmsUrl, {
+    layers: "webgis:infra2_alignment",
+    format: "image/png",
+    transparent: true,
+    version: "1.1.1",
+    srs: "EPSG:4326"
+});
+
 var station = L.tileLayer.wms(wmsUrl, {
     layers: "webgis:infra2_station",
     format: "image/png",
     transparent: true,
     version: "1.1.1",
     srs: "EPSG:4326"
+});
+
+var bm = L.tileLayer.wms(wmsUrl, {
+    layers: "webgis:infra2_bm",
+    format: "image/png",
+    transparent: true,
+    version: "1.1.1",
+    srs: "EPSG:4326"
+});
+
+var sitelocation = L.tileLayer.wms(wmsUrl, {
+    layers: "webgis:infra2_sitelocation",
+    format: "image/png",
+    transparent: true,
+    version: "1.1.1",
+    srs: "EPSG:4326"
+});
+
+// === Layer Control ===
+
+var baseMaps = {
+    "OpenStreetMap": osm
+};
+
+var overlayMaps = {
+    "Centerline": alignment,
+    "Station": station,
+    "Benchmark": bm,
+    "Site Location": sitelocation
+};
+
+L.control.layers(baseMaps, overlayMaps, {
+    collapsed: false
 }).addTo(map);
 
 </script>
