--- a/index.html
+++ b/index.html
@@ -81,6 +81,43 @@ L.control.layers(baseMaps, overlayMaps, {
     collapsed: false
 }).addTo(map);
 
+    // === WMS GetFeatureInfo Popup ===
+
+map.on('click', function (e) {
+
+    var url = wmsUrl +
+        '?service=WMS&version=1.1.1&request=GetFeatureInfo' +
+        '&layers=webgis:infra2_station,webgis:infra2_bm,webgis:infra2_sitelocation' +
+        '&query_layers=webgis:infra2_station,webgis:infra2_bm,webgis:infra2_sitelocation' +
+        '&info_format=application/json' +
+        '&feature_count=5' +
+        '&srs=EPSG:4326' +
+        '&bbox=' + map.getBounds().toBBoxString() +
+        '&width=' + map.getSize().x +
+        '&height=' + map.getSize().y +
+        '&x=' + Math.floor(e.containerPoint.x) +
+        '&y=' + Math.floor(e.containerPoint.y);
+
+    fetch(url)
+        .then(response => response.json())
+        .then(data => {
+            if (data.features.length > 0) {
+
+                var props = data.features[0].properties;
+
+                var popupContent = "<b>Detail:</b><br>";
+
+                for (var key in props) {
+                    popupContent += "<b>" + key + ":</b> " + props[key] + "<br>";
+                }
+
+                L.popup()
+                    .setLatLng(e.latlng)
+                    .setContent(popupContent)
+                    .openOn(map);
+            }
+        });
+});
 </script>
 
 </body>
