--- a/index.html
+++ b/index.html
@@ -27,42 +27,24 @@ var osm = L.tileLayer(
     { attribution: '© OpenStreetMap' }
 ).addTo(map);
 
-// WMS URL
+// WMS URL (PASTIKAN HTTPS & URL NGROK AKTIF)
 var wmsUrl = "https://a11f-2a09-bac1-34a0-18-00-279-5a.ngrok-free.app/geoserver/webgis/wms";
 
-// === WMS Layers (TIDAK addTo dulu) ===
+// === WMS Layers ===
 
-var alignment = L.tileLayer.wms(wmsUrl, {
-    layers: "webgis:infra2_alignment",
-    format: "image/png",
-    transparent: true,
-    version: "1.1.1",
-    srs: "EPSG:4326"
-});
+function createWMSLayer(layerName){
+    return L.tileLayer.wms(wmsUrl, {
+        layers: layerName,
+        format: "image/png",
+        transparent: true,
+        version: "1.1.1"
+    });
+}
 
-var station = L.tileLayer.wms(wmsUrl, {
-    layers: "webgis:infra2_station",
-    format: "image/png",
-    transparent: true,
-    version: "1.1.1",
-    srs: "EPSG:4326"
-});
-
-var bm = L.tileLayer.wms(wmsUrl, {
-    layers: "webgis:infra2_bm",
-    format: "image/png",
-    transparent: true,
-    version: "1.1.1",
-    srs: "EPSG:4326"
-});
-
-var sitelocation = L.tileLayer.wms(wmsUrl, {
-    layers: "webgis:infra2_sitelocation",
-    format: "image/png",
-    transparent: true,
-    version: "1.1.1",
-    srs: "EPSG:4326"
-});
+var alignment = createWMSLayer("webgis:infra2_alignment");
+var station = createWMSLayer("webgis:infra2_station");
+var bm = createWMSLayer("webgis:infra2_bm");
+var sitelocation = createWMSLayer("webgis:infra2_sitelocation");
 
 // === Layer Control ===
 
@@ -81,49 +63,67 @@ L.control.layers(baseMaps, overlayMaps, {
     collapsed: false
 }).addTo(map);
 
-    // === WMS GetFeatureInfo Popup ===
-
-// === WMS GetFeatureInfo Popup (FIXED CRS) ===
+// ===========================================
+// WMS GetFeatureInfo (WORKING VERSION)
+// ===========================================
 
 map.on('click', function (e) {
 
+    var point = map.latLngToContainerPoint(e.latlng, map.getZoom());
     var size = map.getSize();
     var bounds = map.getBounds();
 
-    var url = wmsUrl +
-        '?service=WMS&version=1.1.1&request=GetFeatureInfo' +
-        '&layers=webgis:infra2_station,webgis:infra2_bm,webgis:infra2_sitelocation' +
-        '&query_layers=webgis:infra2_station,webgis:infra2_bm,webgis:infra2_sitelocation' +
-        '&info_format=application/json' +
-        '&feature_count=5' +
-        '&srs=EPSG:3857' +
-        '&bbox=' + map.getBounds().toBBoxString() +
-        '&width=' + size.x +
-        '&height=' + size.y +
-        '&x=' + Math.floor(e.containerPoint.x) +
-        '&y=' + Math.floor(e.containerPoint.y);
+    var params = {
+        request: 'GetFeatureInfo',
+        service: 'WMS',
+        srs: 'EPSG:3857',
+        styles: '',
+        transparent: true,
+        version: '1.1.1',
+        format: 'image/png',
+        bbox: bounds.toBBoxString(),
+        height: size.y,
+        width: size.x,
+        layers: 'webgis:infra2_station,webgis:infra2_bm,webgis:infra2_sitelocation',
+        query_layers: 'webgis:infra2_station,webgis:infra2_bm,webgis:infra2_sitelocation',
+        info_format: 'application/json',
+        x: Math.round(point.x),
+        y: Math.round(point.y)
+    };
+
+    var url = wmsUrl + L.Util.getParamString(params, wmsUrl, true);
+
+    console.log("GetFeatureInfo URL:", url);
 
     fetch(url)
-        .then(response => response.json())
-        .then(data => {
+        .then(function(response){ return response.json(); })
+        .then(function(data){
+
+            console.log("Response:", data);
 
             if (data.features && data.features.length > 0) {
 
                 var props = data.features[0].properties;
-                var popupContent = "<b>Detail:</b><br>";
+                var content = "<b>Detail:</b><br>";
 
-                for (var key in props) {
-                    popupContent += "<b>" + key + ":</b> " + props[key] + "<br>";
-                }
+                Object.keys(props).forEach(function(key){
+                    content += "<b>" + key + ":</b> " + props[key] + "<br>";
+                });
 
                 L.popup()
                     .setLatLng(e.latlng)
-                    .setContent(popupContent)
+                    .setContent(content)
                     .openOn(map);
+            } else {
+                console.log("No feature found");
             }
         })
-        .catch(err => console.log(err));
+        .catch(function(err){
+            console.log("ERROR:", err);
+        });
+
 });
+
 </script>
 
 </body>
