--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ L.control.layers(baseMaps, overlayMaps, {
 }).addTo(map);
 
 // ==========================
-// GET FEATURE INFO (HTML MODE)
+// GET FEATURE INFO (NGROK SAFE)
 // ==========================
 
 map.on('click', function (e) {
@@ -98,25 +98,31 @@ map.on('click', function (e) {
 
     console.log("GetFeatureInfo URL:", url);
 
-    fetch(url)
-        .then(function(response){
-            return response.text();
-        })
-        .then(function(html){
+    fetch(url, {
+        headers: {
+            "ngrok-skip-browser-warning": "true"
+        }
+    })
+    .then(function(response){
+        return response.text();
+    })
+    .then(function(html){
 
-            if(html && html.trim() !== ""){
-                L.popup()
-                    .setLatLng(e.latlng)
-                    .setContent(html)
-                    .openOn(map);
-            } else {
-                console.log("No feature found");
-            }
+        console.log("RAW RESPONSE:", html);
 
-        })
-        .catch(function(err){
-            console.log("FETCH ERROR:", err);
-        });
+        if(html && html.trim() !== ""){
+            L.popup()
+                .setLatLng(e.latlng)
+                .setContent(html)
+                .openOn(map);
+        } else {
+            console.log("No feature found");
+        }
+
+    })
+    .catch(function(err){
+        console.log("FETCH ERROR:", err);
+    });
 
 });
 
